[package]
name = "linalg-rs"
version = "1.1.2"
edition = "2021"
license = "MIT"
readme = "README.md"

description = "Linear algebra in Rust!"
repository = "https://github.com/Snojj25/linalg-rs"

keywords = ["ai", "matrix", "numpy", "linalg", "vector"]
categories = ["mathematics", "science"]

rustflags = ["-C", "opt-level=3"]

[dependencies]
anyhow = "1.0.71"
itertools = "0.11.0"
num-traits = "0.2.15"
rand = "0.8.5"
rayon = "1.7.0"
serde = { version = "1.0.164", features = ["derive"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "dense_mnnp_bench"
harness = false

[[bench]]
name = "dense_nn_bench"
harness = false


[[bench]]
name = "sparse_mnnp_bench"
harness = false

[[bench]]
name = "sparse_nn_bench"
harness = false
